--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /UT0RepasoJava/UT0RepasoJava/nbproject/private/
 /UT0RepasoJava/nbproject/private/
 /UT0RepasoJava/build/
+/EjerciciosReloj/nbproject/private/
+/EjerciciosReloj/build/
