--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /UT0RepasoJava/build/
 /EjerciciosReloj/nbproject/private/
 /EjerciciosReloj/build/
+/EjerciciosReloj_2/nbproject/private/
+/EjerciciosReloj_2/build/
