--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /EjerciciosReloj/build/
 /EjerciciosReloj_2/nbproject/private/
 /EjerciciosReloj_2/build/
+/EjerciciosHilos5678/nbproject/private/
+/EjerciciosHilos5678/build/
