--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /EjerciciosReloj_2/build/
 /EjerciciosHilos5678/nbproject/private/
 /EjerciciosHilos5678/build/
+/UT01_Ejercicio9/nbproject/private/
