--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /EjerciciosHilos5678/nbproject/private/
 /EjerciciosHilos5678/build/
 /UT01_Ejercicio9/nbproject/private/
+/UT01_Ejercicio9/build/
