--- a/UT01_Ejercicio9/nbproject/project.properties
+++ b/UT01_Ejercicio9/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=UT01_Ejercicio9
-main.class=ut01_ejercicio9.UT01_Ejercicio9
+main.class=ut01_ejercicio9.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
