--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /EjerciciosHilos5678/build/
 /UT01_Ejercicio9/nbproject/private/
 /UT01_Ejercicio9/build/
+/UT01_Ejercicio10/nbproject/private/
+/UT01_Ejercicio10/build/
